--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -35,11 +35,19 @@
 
 .left__item--a {
   @include link-unstyled;
-  
 }
 
 .left__item--a:first-child {
   margin-right: 40px;
+}
+
+.left__item--a:hover {
+  transition: .3s ease;
+  color: #F67E7E;
+}
+
+.left__item--a:active {
+  color: grey;
 }
 
 // FOOTER__CENTER
@@ -99,6 +107,15 @@
   display: block;
 }
 
+.right__img:hover {
+  transition: .3s ease;
+  opacity: .7;
+}
+
+.right__img:active {
+  opacity: .5;
+} 
+
 .right__text {
   font-weight: 600;
   font-size: 15px;
@@ -112,12 +129,12 @@
 // RESPONSIVE 
 
 @include breakpoint-down (768px) {
-
+  
   .footer__wrapper {
     flex-wrap: wrap;
     justify-content: space-between;
   }
-
+  
   .footer__right {
     display: flex;
     align-items: flex-start;
@@ -128,7 +145,7 @@
     margin-left: auto;
     margin-right: auto;
   }
-
+  
   .right__list {
     margin-top: 10px;
     margin-left: -0px;
